# rlbot_gui_rust

./: .gitignore  .prettierignore  Cargo.toml  LICENSE.md  README.md  gen-latest-json.bat  generate-deb-release-info.sh  generate-deb-release.sh  package.json  tauri.conf.json
%LOCALAPPDATA%/RLBotGUIX/: config.ini
.github/workflows/: main.yml
assets/: index.html
assets/css/: appearance-editor.css  bootstrap-vue.min.css  story.css  style.css  vue-virtual-scroller.css
assets/csv/: items.csv
assets/js/: appearance-editor-vue.js  bootstrap-vue-icons.min.js  bootstrap-vue.min.js  bot-card-vue.js  bot-pool-vue.js  categories.js  colorpicker-vue.js  community-events-vue.js  console-vue.js  item-field-vue.js  launcher-preference-vue.js  main-vue.js  main.js  mini-console-vue.js  mutator-field-vue.js  python-config-vue.js  runnable-card-vue.js  sandbox-vue.js  script-card-vue.js  script-dependencies-vue.js  story-alter-save-state.js  story-challenges.js  story-mode-start.js  story-mode.js  story-pick-team.js  story-recruit-list.js  story-upgrades.js  team-card-vue.js  velocity-arrow-vue.js  vue-konva.min.js  vue-router.min.js  vue-virtual-scroller.min.js
assets/json/: colors.json  standard-maps.json
docs/: latest.json
docs/apt-repo/: pgp-key.public
docs/apt-repo/dists/stable/: InRelease  Release  Release.gpg
docs/apt-repo/dists/stable/main/binary-amd64/: Packages
src/: get_missing_packages.py  main.rs  rlbot.rs
src-tauri/: Cargo.toml  gen-latest-json.bat  latest.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: bot_management.rs  commands.rs  config_handles.rs  configparser.rs  custom_map_util.py  custom_maps.rs  main.rs  match_handler.py  rlbot.rs  settings.rs  showroom_util.py  start_match_util.py  stories.rs  tauri_plugin.rs
src-tauri/src/bot_management/: bot_creation.rs  cfg_helper.rs  downloader.rs  zip_extract_fixed.rs
src-tauri/src/rlbot/: gateway_util.rs  setup_manager.rs
src-tauri/src/rlbot/agents/: runnable.rs
src-tauri/src/rlbot/parsing/: agent_config_parser.rs  bot_config_bundle.rs  directory_scanner.rs  match_settings_config_parser.rs
src-tauri/src/stories/: bots_base.rs  cmaps.rs  default.rs  easy.rs
src-tauri/src/stories/cmaps/: default.rs  easy.rs
src/bot_management/: bot_creation.rs
src/rlbot/: parsing.rs
src/rlbot/agents/: base_script.rs  runnable.rs
src/rlbot/parsing/: agent_config_parser.rs  bot_config_bundle.rs  directory_scanner.rs  match_settings_config_parser.rs
tauri-src/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri-src/src/: bot_management.rs  commands.rs  config_handles.rs  custom_maps.rs  is_online.rs  main.rs  match_handler.py  rlbot.rs  settings.rs  start_match.py
tauri-src/src/bot_management/: bot_creation.rs  downloader.rs  zip_extract_fixed.rs
tauri-src/src/rlbot/: agents.rs  gateway_util.rs  parsing.rs  setup_manager.rs
tauri-src/src/rlbot/parsing/: agent_config_parser.rs  bot_config_bundle.rs  directory_scanner.rs  match_settings_config_parser.rs
