[package]
name = "rl-bot-gui"
version = "1.0.9"
description = "The RLBot GUI ported to Rust"
authors = ["VirxEC"]
license = "MIT"
repository = "https://github.com/VirxEC/rlbot_gui_rust"
default-run = "rl-bot-gui"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
sanitize-filename = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.11.10", features = ["json", "stream"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
configparser = { version = "3", features = ["indexmap"] }
glob = "0.3"
base64 = "0.13"
imghdr = "0.7"
rayon = "1.5"
open = "3.0"
regex = "1.5"
rand = "0.8"
fs_extra = "1.2"
futures-util = "0.3"
sysinfo = "0.24"
os_pipe = "1.0"
tokio = "1.19"

[target.'cfg(windows)'.dependencies]
registry = "1.2"

# Only use the updater feature on Windows & MacOS, where it's needed

[target.'cfg(not(any(windows, target_os = "macos")))'.dependencies.tauri]
version = "1.0"
features = ["devtools", "dialog", "reqwest-client"]

[target.'cfg(any(windows, target_os = "macos"))'.dependencies.tauri]
version = "1.0"
features = ["devtools", "dialog", "reqwest-client", "updater"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
