[package]
name = "rlbot_gui"
version = "0.1.0"
description = "The RLBot GUI ported to Rust"
authors = ["VirxEC"]
license = "MIT"
repository = "https://github.com/VirxEC/rlbot_gui_rust"
default-run = "rlbot_gui"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
sanitize-filename = "0.4"
zip-extract = "0.1.1"
reqwest = { version = "0.11.10", features = ["json", "stream"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
configparser = "3"
glob = "0.3"
base64 = "0.13"
imghdr = "0.7"
rayon = "1.5"
open = "2.1"
regex = "1.5"
rand = "0.8"
fs_extra = "1.2"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
registry = "1.2"

[dependencies.native-dialog]
version = "0.6"

[target.'cfg(windows)'.dependencies.native-dialog]
version = "0.6"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[dependencies.tauri]
version = "1.0.0-rc.14"
features = ["devtools"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
